tests/fixtures/invalid/type_errors/heterogeneous_list.luma
-- List with inconsistent types
let mixed = [1, "two", 3]
